[gd_scene load_steps=5 format=3 uid="uid://cbo35qxd8ev0v"]

[ext_resource type="Script" uid="uid://7s6bo0xiah3v" path="res://scripts/game_over.gd" id="1_xeevv"]
[ext_resource type="FontFile" uid="uid://cbi6qc2w2chwv" path="res://assets/fonts/Pixellari.ttf" id="2_wqhvx"]
[ext_resource type="Texture2D" uid="uid://c0hlw0e2d107l" path="res://assets/images/bg.png" id="3_tbwuq"]
[ext_resource type="StyleBox" uid="uid://bc8oxxejsrbsp" path="res://styles/normal_button.tres" id="4_racf3"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_xeevv")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
offset_right = 1973.0
offset_bottom = 1130.0
color = Color(0, 0, 0, 1)

[node name="SIGLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 1006.0
offset_top = 36.0
offset_right = 1885.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.901961, 0.431373, 0.0705882, 1)
theme_override_fonts/font = ExtResource("2_wqhvx")
theme_override_font_sizes/font_size = 35
text = "\"> SIG: Commander. What is your current situation? Please respond...\""
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="BGContainer" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -1
offset_left = 25.0
offset_top = 25.0
offset_right = 514.0
offset_bottom = 300.0
scale = Vector2(1.94, 1.94)
color = Color(0.0392157, 0.0392157, 0.0392157, 0.619608)
metadata/_edit_group_ = true

[node name="BG" type="Sprite2D" parent="BGContainer"]
z_index = -2
position = Vector2(242.784, 136.598)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_tbwuq")

[node name="HungerEnding" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 1062.0
offset_top = 203.0
offset_right = 1837.0
offset_bottom = 735.0
theme_override_colors/font_color = Color(0.54902, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wqhvx")
theme_override_font_sizes/font_size = 46
text = "The commander's supplies had run dry, leaving the city's leader weakened and unsteady.

Each step grew heavier, every breath a struggle, until finally they collapsed at the threshold of the command chamber, alone as the lights of Ironvale-9 flickered and dimmed around them."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ReputationEnding" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 1062.0
offset_top = 203.0
offset_right = 1837.0
offset_bottom = 745.0
theme_override_colors/font_color = Color(0.54902, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wqhvx")
theme_override_font_sizes/font_size = 46
text = "The citizens had grown restless, murmuring of mismanagement and failures, until one night their patience broke. 

The commander was confronted by their own people, swift and merciless; by dawn, the command chamber was empty, and the streets whispered of betrayal from within."
horizontal_alignment = 1
autowrap_mode = 2

[node name="IsolationEnding" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 1062.0
offset_top = 250.0
offset_right = 1837.0
offset_bottom = 733.0
theme_override_colors/font_color = Color(0.54902, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_wqhvx")
theme_override_font_sizes/font_size = 46
text = "Refusing to ally with neighboring territories left Ironvale-9 exposed and overextended. 

Supplies dwindled, threats grew, and the region's stability began to crumble, a quiet reminder that isolation came with a heavy price."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="ReplayButton" type="Button" parent="Buttons"]
offset_left = 1033.0
offset_top = 800.0
offset_right = 1869.0
offset_bottom = 909.0
theme_override_fonts/font = ExtResource("2_wqhvx")
theme_override_font_sizes/font_size = 61
theme_override_styles/focus = ExtResource("4_racf3")
theme_override_styles/disabled_mirrored = ExtResource("4_racf3")
theme_override_styles/disabled = ExtResource("4_racf3")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_racf3")
theme_override_styles/hover_pressed = ExtResource("4_racf3")
theme_override_styles/hover_mirrored = ExtResource("4_racf3")
theme_override_styles/hover = ExtResource("4_racf3")
theme_override_styles/pressed_mirrored = ExtResource("4_racf3")
theme_override_styles/pressed = ExtResource("4_racf3")
theme_override_styles/normal_mirrored = ExtResource("4_racf3")
theme_override_styles/normal = ExtResource("4_racf3")
text = "TRY AGAIN."

[node name="MainMenuButton" type="Button" parent="Buttons"]
offset_left = 1033.0
offset_top = 933.0
offset_right = 1869.0
offset_bottom = 1042.0
theme_override_fonts/font = ExtResource("2_wqhvx")
theme_override_font_sizes/font_size = 61
theme_override_styles/focus = ExtResource("4_racf3")
theme_override_styles/disabled_mirrored = ExtResource("4_racf3")
theme_override_styles/disabled = ExtResource("4_racf3")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_racf3")
theme_override_styles/hover_pressed = ExtResource("4_racf3")
theme_override_styles/hover_mirrored = ExtResource("4_racf3")
theme_override_styles/hover = ExtResource("4_racf3")
theme_override_styles/pressed_mirrored = ExtResource("4_racf3")
theme_override_styles/pressed = ExtResource("4_racf3")
theme_override_styles/normal_mirrored = ExtResource("4_racf3")
theme_override_styles/normal = ExtResource("4_racf3")
text = "GIVE UP."

[connection signal="pressed" from="Buttons/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="Buttons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
